_PyObject_LookupAttr calls in class_(un)register leak python object #71680

Closed
opened 2019-11-19 17:27:40 +01:00 by Stefan Brüns · 4 comments
**System Information** **Blender Version** Broken: master (83e87655627f) **Short description of error** _PyObject_LookupAttr returns a new object in the third parameter, which has to be dereferenced after use. https://developer.blender.org/diffusion/B/browse/master/source/blender/python/intern/bpy_rna.c;83e87655627fc2156a87dbfe2f676869b97fa8d2$8688?as=source&blame=off&L8688 https://developer.blender.org/diffusion/B/browse/master/source/blender/python/intern/bpy_rna.c;83e87655627fc2156a87dbfe2f676869b97fa8d2$8688?as=source&blame=off&L8794 Compare with e.g. https://github.com/python/cpython/blob/8e0de2a4808d7c2f4adedabff89ee64e0338790a/Objects/object.c#L1087
Author

Added subscriber: @Stefan-Bruns

Added subscriber: @Stefan-Bruns
Author

Also, adding an explicit "case 0: break" for the _PyObject_LoopupAttr return value would IMHO be good, as having no "register"/"unregister" method is no error.

Also, adding an explicit "case 0: break" for the _PyObject_LoopupAttr return value would IMHO be good, as having no "register"/"unregister" method is no error.

This issue was referenced by 43eb34ec81

This issue was referenced by 43eb34ec81fdf0479703a1c817b64a70dc93bbea

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-11-20 07:58:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71680
No description provided.