Fix T71680: _PyObject_LookupAttr memory leak